# PotParser

./: README.md  dockerfile  requirements.txt  setup.cfg  setup.py
potparser/: __init__.py  cli.py  parser.py
potparser/helpers/: __init__.py  float_helpers.py  mg_calculator.py  url_formatter.py
potparser/utils/: __init__.py  create_table.py  help_printer.py
potparser/views/: percentage_menu.py  strain_menu.py
potparser/webscrapers/: __init__.py  strain_scraper.py
