[metadata]
name = potparser
version = 1.0.0
description = Useful for all Potheads
long_description = file: README.md
long_description_content_type = text/markdown
author = V2BlockBuster2K
url = https://github.com/V2BlockBuster2K/PotParser
license = GPLv3
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = potparser, potparser.helpers, potparser.utils, potparser.views, potparser.webscrapers
install_requires =
    lxml>=4.9.2
    requests>=2.28.2
    tabulate>=0.9.0
    aiohttp>=3.8.4
python_requires = >=3.9

[options.entry_points]
console_scripts =
    potparser = potparser.cli:main
